# arcana

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  README.md  RECOVERY.md  RESTORATION.md  UPDATE.md  arcana.json  arcana.md  grimoire.json  library.json  log.md  pyproject.toml  requirements-summon-build.txt
.github/workflows/: ci.yml  summon-release.yml
.obsidian/: graph.json
docs/: agent_configuration.md  agent_targets.md  architecture_backlog.md  command_surface.md  evals.md  governance.md  installation.md  obsidian.md  operating_model.md  page_schema.md  quickstart.md  reference.md  release.md  rite_profiles.md  script_vs_ai.md  skill_schema.md  skills.md  summoning_contract.md  temp_1_3_0_handoff.md  vscode.md
formulae/: README.md  chapter_hub.formula.md  chapter_index.formula.md  invocation.formula.md  log_entry.formula.md  page.formula.md  source.formula.md
formulae/grimoire/: INDEX.md  README.md  grimoire.json  log.md  root_hub.formula.md  scaffold_contract.json
invocations/agent/: agent.md  register_skills.md  sync_agentfile.md  sync_instructions.md  sync_skills.md  update_agent_block.md
invocations/arc/: adopt.md  arc.md  clean.md  help.md  improve_arcana.md  sync.md  update.md
invocations/arcana/: INDEX.md  arcana.md  improve_arcana.md  restore.md  update.md  validate_boundaries.md
invocations/grimoire/: INDEX.md  add.md  agent_sync_skills.md  analyze_semantics.md  audit_boundaries.md  audit_semantics.md  capture_answer.md  create_chapter.md  create_grimoire.md  file_answer.md  grimoire.md  health_check.md  help.md  import.md  improve_grimoire.md  ingest.md  lint.md  register_skills.md  repair_links.md  restore.md  sync_skills.md  update.md  update_arcana.md  validate_boundaries.md  validate_structure.md
invocations/grm/: add.md  adopt.md  audit_boundaries.md  audit_semantics.md  create_grimoire.md  grm.md  health_check.md  help.md  move.md  remove.md  repair_links.md  sync.md  update.md  validate_structure.md
invocations/help/: help.md
invocations/meta/: INDEX.md  base_invocation.md  grimoire_directory_guard.md  help.md  meta.md  skill_orphan_reconcile.md  subagent_lanes.md  update_agent_block.md
invocations/workspace/: clean.md  workspace.md
rites/: _lib.py  adopt_grimoire.py  agent_targets.py  analyze_health.py  append_log.py  build_summon_binary.py  clean_artifacts.py  command_surface.py  diagnostics.py  inject_agent_file.py  migrate_home.py  new_page.py  register_skills.py  repair_links.py  restructure_grimoire.py  rite_profiles.py  scaffold_contract.py  summon.bat  summon.py  summon.sh  summon_contract.py  summon_core.py  summon_gui.py  summon_state.py  sync_catalog.py  sync_docs.py  sync_library.py  sync_skills.py  update_grimoires.py  validate.py  validate_doc_trees.py  validate_domain_structure.py  validate_encoding.py  validate_format.py  validate_frontmatter.py  validate_grimoire_structure.py  validate_links.py  validate_naming.py  validate_orphans.py  validate_portability.py  (+5 more)
rites/data/: agent_targets.json  command_surface.json  deprecated_terms.txt  rite_profiles.json  summon_contract.json  validators.json
rites/templates/: grimoire_block.md
skills/agent-update/: SKILL.md
skills/analyze-semantics/: SKILL.md
skills/arcana-clean/: SKILL.md
skills/arcana-improve/: SKILL.md
skills/arcana-validate/: SKILL.md
skills/arcana-validate-all/: SKILL.md
skills/arcana-validate-boundaries/: SKILL.md
skills/arcana-validate-format/: SKILL.md
skills/arcana-validate-frontmatter/: SKILL.md
skills/arcana-validate-links/: SKILL.md
skills/arcana-validate-naming/: SKILL.md
skills/arcana-validate-orphans/: SKILL.md
skills/arcana-validate-portability/: SKILL.md
skills/arcana-validate-provenance/: SKILL.md
skills/arcana-validate-security/: SKILL.md
skills/arcana-validate-semantics/: SKILL.md
skills/arcana-validate-skill-refs/: SKILL.md
skills/arcana-validate-structure/: SKILL.md
skills/catalog-adopt/: SKILL.md
skills/catalog-sync/: SKILL.md
skills/clean/: SKILL.md
skills/create-chapter/: SKILL.md
skills/create-grimoire/: SKILL.md
skills/domain-analyze-semantics/: SKILL.md
skills/domain-create-chapter/: SKILL.md
skills/domain-create-grimoire/: SKILL.md
skills/domain-file-answer/: SKILL.md
skills/domain-improve/: SKILL.md
skills/domain-ingest/: SKILL.md
skills/domain-lint/: SKILL.md
skills/domain-repair-links/: SKILL.md
skills/domain-validate-boundaries/: SKILL.md
skills/domain-validate-structure/: SKILL.md
skills/grimoire-analyze-semantics/: SKILL.md
skills/grimoire-create/: SKILL.md
skills/grimoire-create-chapter/: SKILL.md
skills/grimoire-file-answer/: SKILL.md
skills/grimoire-improve/: SKILL.md
skills/grimoire-ingest/: SKILL.md
skills/grimoire-lint/: SKILL.md
skills/grimoire-repair-links/: SKILL.md
skills/grimoire-validate-boundaries/: SKILL.md
skills/grimoire-validate-structure/: SKILL.md
skills/help/: SKILL.md
skills/improve/: SKILL.md
skills/library-adopt/: SKILL.md
skills/library-sync/: SKILL.md
skills/meta-help/: SKILL.md
skills/meta-update-agent-block/: SKILL.md
skills/register-skills/: SKILL.md
skills/skills-register/: SKILL.md
skills/validate-encoding/: SKILL.md
skills/validate-format/: SKILL.md
tests/: conftest.py  eval_harness.py  test_adopt_grimoire.py  test_agent_targets.py  test_append_log.py  test_clean_artifacts.py  test_command_surface.py  test_doc_indexes.py  test_eval_live.py  test_eval_scaffolding.py  test_grimoire_scaffold_formula.py  test_inject_agent_file.py  test_lib.py  test_negative_coverage.py  test_new_page.py  test_reference_placeholders.py  test_register_skills.py  test_repair_links.py  test_restructure_grimoire.py  test_result_reporter.py  test_rite_profiles.py  test_skill_invocation_policy.py  test_summon_contract.py  test_summon_core.py  test_summon_state.py  test_sync_docs.py  test_sync_library.py  test_sync_skills.py  test_update_grimoires.py  test_validate_encoding.py  test_validate_format.py  test_validate_smart.py  test_validators_against_fixtures.py  test_version_consistency.py
(+181 files in other folders)
